lec3/ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ing
  # annotations:
  #   nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  
spec:
  ingressClassName: nginx
  tls:
  - secretName: nginx-tls-secret
  rules:
  - host: "nginx.$server-ip.nip.io"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-svc
            port:
              number: 80
